--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@ li
 				<div class="box">
 					<img src="images/achutawhite250.png">
 					<h3 style="padding-top: 1em;">Achuta Kadambi</h3>
-					<p>Assistant Professor ECE, UCLA</p>
+					<p>Assistant Professor, UCLA</p>
 					<a href="https://www.ee.ucla.edu/achuta-kadambi/" class="button button-small">More about Achuta</a> </div>
 			</div>
 			<div class="column3">
 				<div class="box">
 					<img src="images/ramesh.png">
 					<h3 style="padding-top: 1em;">Ramesh Raskar</h3>
-					<p>Assistant Professor MIT</p>
+					<p>Associate Professor, MIT</p>
 					<a href="http://web.media.mit.edu/~raskar/" class="button button-small">More about Ramesh</a> </div>
 			</div>
 		</div>
