Table of Contents - Styling change

--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@ li
 
 .chapter {
 	display:list-item;
-	padding-right: 15em;
-	padding-left: 30em;
-	padding-top: 10px;
+	padding-left: 25%;
+	padding-top: 0.5em;
 	text-align: left;
 	list-style-position: inside;
 }
