Redesign: Removing content

--- a/index.html
+++ b/index.html
@@ -58,26 +58,18 @@ li
 			<div id="logo"> <span class="icon"><img src="images/mitpresscircular.png" alt="Logo"></span>
 				<h1>Computational Imaging</h1>
 				<span>An <a href="https://mitpress.mit.edu/" rel="nofollow">MIT Press</a> book</span> </div>
-			<div id="menu">
+			<!-- <div id="menu">
 				<ul>
 					<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
-					<li><a href="#wrapper2" accesskey="2" title="">Coming Soon</a></li>
 					<li><a href="#wrapper3" accesskey="3" title="">The Authors</a></li>
 					<li><a href="#wrapper4" accesskey="4" title="">Table of Contents</a></li>
 					<li><a href="#footer" accesskey="5" title="">Student Contributors</a></li>
 					<li><a href="#" accesskey="6" title="">Contact Us</a></li>
 				</ul>
-			</div>
+			</div> -->
 		</div>
 	</div>
-	<div id="wrapper2">
-		<div id="welcome" class="container">
-			<div class="title">
-				<h2>Available Month, 20XX</h2>
-			</div>
-			<p>This is a synopsis of the book. This is a sentence about why myself as a professor should use your texbook in my class. This is a short acknowledgement for what went into the book and everyone who made it possible. </p>
-		</div>
-	</div>
+	
 	<div id="wrapper3">
 		<div id="portfolio" class="container">
 			<div class="title">
@@ -160,12 +152,13 @@ li
 		</div>
 	</div>
 </div>
-<div id="footer" class="container">
+<!-- <div id="footer" class="container">
 	<div class="title">
 		<h2>Student Contributors</h2>
 		<span class="byline">Coming Soon</span> </div>
 
-</div>
+</div> -->
+<div> &nbsp; </div>
 <div id="copyright" class="container">
 	<p>&copy; MIT Press. All rights reserved. | Built by<a href="http://ateamdigital.com" rel="nofollow"> A-Team Digital</a>.</p>
 </div>
