--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ li
 
 .chapter {
 	display:list-item;
-	padding-left: 25%;
+	padding-left: 20%;
 	padding-top: 0.5em;
 	text-align: left;
 	list-style-position: inside;
@@ -39,16 +39,14 @@ li
 	padding-top: 5px;
 }
 #wrapper1,
-#wrapper2,
 #wrapper3,
 #wrapper4,
 #footer {
   padding-top: .7em;
+  margin-left: 10%;
+  margin-right: 10%
 }
-#wrapper2 {
-  padding-left: 15em;
-  padding-right: 15em;
-}
+
 </style>
 
 <body style= "text-align: center;">
@@ -69,32 +67,32 @@ li
 			</div> -->
 		</div>
 	</div>
-	
+	<div> &nbsp; </div>
 	<div id="wrapper3">
 		<div id="portfolio" class="container">
 			<div class="title">
 				<h2>The Authors</h2>
-				<span class="byline">Alphabetical</span> </div>
+				<span class="byline">( In Alphabetical order)</span> </div>
 			<div class="column1">
 				<div class="box">
-					<img src="images/ayush.png">
-					<h3 style="padding-top: 1em;">Ayush Bhandari</h3>
+					<!-- <img src="images/ayush.png"> -->
+					<h3 style="padding-top: 1em;"> <a href="http://www.mit.edu/~ayush/MIT/Home.html" class="button button-small">Ayush Bhandari </a></h3>
 					<p>MIT</p>
-					<a href="http://www.mit.edu/~ayush/MIT/Home.html" class="button button-small">More about Ayush</a> </div>
+				</div>
 			</div>
-			<div class="column2">
+			<div class="column2" style="padding-left: 5%;">
 				<div class="box">
-					<img src="images/achutawhite250.png">
-					<h3 style="padding-top: 1em;">Achuta Kadambi</h3>
-					<p>Assistant Professor, UCLA</p>
-					<a href="https://www.ee.ucla.edu/achuta-kadambi/" class="button button-small">More about Achuta</a> </div>
+					<!-- <img src="images/achutawhite250.png"> -->
+					<h3 style="padding-top: 1em;"> <a href="https://www.ee.ucla.edu/achuta-kadambi/" class="button button-small">Achuta Kadambi </a></h3>
+					<p>Asst. Professor, UCLA</p>
+				</div>
 			</div>
-			<div class="column3">
+			<div class="column3" style="padding-left: 5%;">
 				<div class="box">
-					<img src="images/ramesh.png">
-					<h3 style="padding-top: 1em;">Ramesh Raskar</h3>
-					<p>Associate Professor, MIT</p>
-					<a href="http://web.media.mit.edu/~raskar/" class="button button-small">More about Ramesh</a> </div>
+					<!-- <img src="images/ramesh.png"> -->
+					<h3 href="http://web.media.mit.edu/~raskar/" class="button button-small" style="padding-top: 1em;"> <a href="http://web.media.mit.edu/~raskar/" class="button button-small">Ramesh Raskar </a></h3>
+					<p>Assoc. Professor, MIT</p>
+				</div>
 			</div>
 		</div>
 	</div>
